# the-thing

./: .gitignore  README.md  pyproject.toml
src/: the_thing.py
src/common/: config.py  file.py  model.py  prompts.py
