[project]
name = "the-thing"
version = "0.1.0"
description = ""
authors = [
    {name = "skril"}
]
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "pymupdf (>=1.25.3,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "huggingface-hub (>=0.29.0,<0.30.0)",
    "torch (>=2.6.0,<3.0.0)",
    "dataclasses-json (>=0.6.7,<0.7.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "python-levenshtein (>=0.26.1,<0.27.0)",
    "jsonpath-ng (>=1.7.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
